# rust-guitar-dsp-experiment

./: Cargo.toml  README.md
src/: main.rs  server.rs  settings.rs
src/managers/: cache.rs  mod.rs  performance.rs
src/managers/audio_device_settings/: constants.rs  error.rs  mod.rs
src/managers/database/: constants.rs  error.rs  mod.rs  models.rs
src/managers/dsp/: error.rs  mod.rs  models.rs
src/managers/file_system/: error.rs  mod.rs
src/processors/: mod.rs
src/processors/frontline/: clean_booster.rs  mod.rs  models.rs  simple_distortion.rs
src/processors/frontline/ocd/: mod.rs  models.rs  tone_stack.rs  waveshaper.rs
src/processors/internal/: gain.rs  mod.rs  resampler.rs
src/processors/internal/filter/: mod.rs  models.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/v1/: healthy.rs  mod.rs
src/routes/api/v1/device/: mod.rs  models.rs
src/routes/api/v1/performance/: mod.rs  models.rs
src/routes/api/v1/presets/: mod.rs
src/routes/api/v1/presets/models/: requests.rs  responses.rs
src/routes/api/v1/processors/: mod.rs
src/routes/api/v1/processors/models/: requests.rs  responses.rs
