[package]
name = "mojo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros"] }
clap = { version = "4.5.4", features = ["env", "derive"] }
cpal = { version = "0.15.3", features = ["asio", "jack"] }
ringbuf = "0.4.0"
serde_json = "1.0.117"
sysinfo = "0.30.12"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1.0.200", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
alsa = "0.9.0"
dirs = "5.0.1"
mongodb = "2.8.2"
uuid = "1.8.0"
futures = "0.3.30"
regex = { version = "1.10.5", features = [] }
rubato = "0.15.0"
